PanelView: make floating panel more efficient

When floatingness is changed by QML Animation, updateFloating() is called
many times, and updateMask() is called at least 26 times, but some parts of updateFloating() don't need to be called more
than once. By moving the animation to PanelView, PanelView doesn't need
to subscribe to floatingness changes in QML, instead the floatingness
property is modified by QPropertyAnimation in PanelView, which prevents
some potentially expensive operations from being called many times when
the floating state changes once.

BUG: 483680
FIXED-IN: 6.1